--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-29  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* configure.in: Added "nso" to ALL_LINGUAS.
+
 2004-11-05  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* COPYING: Remove comment about Eazel trademarks
