--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-29  Alexander Larsson  <alexl@redhat.com>
+	
+	* libnautilus-private/nautilus-file-dnd.c:
+	(nautilus_drag_can_accept_item):
+	Handle drags to desktop items.
+
 2004-11-29  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* configure.in: Added "nso" to ALL_LINGUAS.
