Fix underscore escaping in open with menu.
2004-11-29  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c:
	(add_application_to_open_with_menu), (real_update_menus):
	Fix underscore escaping in open with menu.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-11-29  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-directory-view.c:
+	(add_application_to_open_with_menu), (real_update_menus):
+	Fix underscore escaping in open with menu.
+
+2004-11-29  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-bookmark.c:
 	(nautilus_bookmark_get_pixbuf):
 	Force size for pixbufs.
