--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-03  Žygimantas Beručka  <uid0@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2004-11-29  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* nso.po: Added Northern Sotho translation by
