Fixed typo in Turkish Translation
	* tr.po: Fixed typo in Turkish Translation

--- a/po/tr.po
+++ b/po/tr.po
@@ -4232,7 +4232,7 @@ msgstr "Bu klasör içinde boş bir klasör oluştur"
 
 #: src/file-manager/fm-directory-view.c:5708
 msgid "No templates Installed"
-msgstr "Hiçbir şablom Kurulmamış"
+msgstr "Hiçbir Şablom Kurulmamış"
 
 # libnautilus/nautilus-clipboard-ui.xml.h:6 src/nautilus-shell-ui.xml.h:74
 #. name, stock id, label
