--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-05  Baris Cicek <baris@teamforce.name.tr>
+
+	* tr.po: Fixed typo in  Turkish Translation
+
 2004-12-03  Žygimantas Beručka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
