--- a/po/tr.po
+++ b/po/tr.po
@@ -4232,7 +4232,7 @@ msgstr "Bu klasör içinde boş bir klasör oluştur"
 
 #: src/file-manager/fm-directory-view.c:5708
 msgid "No templates Installed"
-msgstr "Hiçbir Şablom Kurulmamış"
+msgstr "Hiç şablon kurulmamış"
 
 # libnautilus/nautilus-clipboard-ui.xml.h:6 src/nautilus-shell-ui.xml.h:74
 #. name, stock id, label
@@ -5563,7 +5563,285 @@ msgid ""
 "We have also seen this error when a faulty version of bonobo-activation was "
 "installed."
 msgstr ""
+
+#: src/file-manager/nautilus-directory-view-ui.xml.h:27
+msgid "No templates Installed"
+msgstr "Hiç şablon kurulmamış"
+
+#: src/file-manager/nautilus-directory-view-ui.xml.h:35
+msgid "Prot_ect"
+msgstr "_Koru"
+
+# libnautilus-private/nautilus-volume-monitor.c:1177
+#: src/file-manager/nautilus-directory-view-ui.xml.h:36
+msgid "Protect the selected volume"
+msgstr "Seçili sistemi koru"
+
+# src/file-manager/nautilus-directory-view-ui.xml.h:37
+#: src/file-manager/nautilus-directory-view-ui.xml.h:46
+msgid "Show media properties for the selected volume"
+msgstr "Seçilen sistem için aygıt özelliklerini göster"
+
+# src/file-manager/nautilus-directory-view-ui.xml.h:37
+#: src/file-manager/nautilus-directory-view-ui.xml.h:52
+msgid "View or modify the properties of each selected item"
+msgstr "Seçili her öğenin özelliklerini göster ya da değiştir"
+
+# libnautilus/nautilus-clipboard-ui.xml.h:6 src/nautilus-shell-ui.xml.h:74
+#: src/file-manager/nautilus-directory-view-ui.xml.h:55
+msgid "_Empty File"
+msgstr "_Boş Dosya"
+
+# src/nautilus-window-menus.c:315
+#: src/file-manager/nautilus-directory-view-ui.xml.h:57
+msgid "_Format"
+msgstr "_Biçimlendir"
+
+# src/file-manager/fm-desktop-icon-view.c:1113
+#: src/file-manager/nautilus-directory-view-ui.xml.h:58
+msgid "_Mount Volume"
+msgstr "_Sistemi Bağla"
+
+#: src/file-manager/nautilus-directory-view-ui.xml.h:60
+msgid "_Open Scripts Folder"
+msgstr "_Betikler Klasörünü Aç"
+
+# libnautilus/nautilus-clipboard-ui.xml.h:8 src/nautilus-shell-ui.xml.h:87
+#: src/file-manager/nautilus-directory-view-ui.xml.h:61
+msgid "_Paste Files"
+msgstr "Dosyaları _Yapıştır"
+
+# libnautilus-private/nautilus-file-operations.c:1994
+#: src/file-manager/nautilus-directory-view-ui.xml.h:62
+msgid "_Paste Files Into Folder"
+msgstr "Dosyaları _Klasörün İçine Yapıştır"
+
+# src/file-manager/fm-properties-window.c:487
+#: src/file-manager/nautilus-directory-view-ui.xml.h:63
+msgid "_Properties"
+msgstr "Ö_zellikler"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:26
+#: src/file-manager/nautilus-directory-view-ui.xml.h:64
+msgid "_Rename..."
+msgstr "Ye_niden Adlandır..."
+
+#: src/file-manager/nautilus-directory-view-ui.xml.h:65
+msgid "_Scripts"
+msgstr "_Betikler"
+
+#: src/file-manager/nautilus-icon-view-ui.xml.h:1
+msgid "Arran_ge Items"
+msgstr "Öğ_eleri Düzenle"
+
+# src/file-manager/fm-icon-view.c:177
+# src/file-manager/nautilus-icon-view-ui.xml.h:33
+#: src/file-manager/nautilus-icon-view-ui.xml.h:2
+msgid "By Modification _Date"
+msgstr "_Değişim Tarihine Göre"
+
+# src/file-manager/fm-icon-view.c:184
+# src/file-manager/nautilus-icon-view-ui.xml.h:37
+#: src/file-manager/nautilus-icon-view-ui.xml.h:3
+msgid "By _Emblems"
+msgstr "_Amblemlerine Göre"
+
+# src/file-manager/fm-icon-view.c:156
+# src/file-manager/nautilus-icon-view-ui.xml.h:38
+#: src/file-manager/nautilus-icon-view-ui.xml.h:4
+msgid "By _Name"
+msgstr "İ_sme Göre"
+
+# src/file-manager/fm-icon-view.c:163
+# src/file-manager/nautilus-icon-view-ui.xml.h:39
+#: src/file-manager/nautilus-icon-view-ui.xml.h:5
+msgid "By _Size"
+msgstr "_Büyüklüğe Göre"
+
+# src/file-manager/fm-icon-view.c:170
+# src/file-manager/nautilus-icon-view-ui.xml.h:40
+#: src/file-manager/nautilus-icon-view-ui.xml.h:6
+msgid "By _Type"
+msgstr "_Türe Göre"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:2
+#: src/file-manager/nautilus-icon-view-ui.xml.h:7
+msgid "Clean _Up by Name"
+msgstr "İ_sme Göre Temizle"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:21
+#: src/file-manager/nautilus-icon-view-ui.xml.h:8
+msgid "Compact _Layout"
+msgstr "Sıkışı_k Düzen"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:3
+#: src/file-manager/nautilus-icon-view-ui.xml.h:9
+msgid "Display icons in the opposite order"
+msgstr "Simgeleri ters sıra ile göster"
+
+# src/file-manager/fm-icon-view.c:157
+# src/file-manager/nautilus-icon-view-ui.xml.h:7
+#: src/file-manager/nautilus-icon-view-ui.xml.h:10
+msgid "Keep icons lined up on a grid"
+msgstr "Simgeleri bir ızgara üzerinde hizalı tut"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:11
+#: src/file-manager/nautilus-icon-view-ui.xml.h:16
+msgid "Leave icons wherever they are dropped"
+msgstr "Simgeler nerede bırakılırsa orada dursun"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:12
+#: src/file-manager/nautilus-icon-view-ui.xml.h:17
+msgid "Make the selected icon stretchable"
+msgstr "Seçili simgeyi esnetilebilir duruma getir"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:13
+#: src/file-manager/nautilus-icon-view-ui.xml.h:18
+msgid "Re_versed Order"
+msgstr "_Ters Sıra"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:16
+#: src/file-manager/nautilus-icon-view-ui.xml.h:19
+msgid "Reposition icons to better fit in the window and avoid overlapping"
+msgstr ""
+"Simgeleri üst üste gelmeyi engelleyecek şekilde pencere içinde daha uygun "
+"bir şekilde konumlandır"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:18
+#: src/file-manager/nautilus-icon-view-ui.xml.h:21
+msgid "Restore each selected icon to its original size"
+msgstr "Her seçili simgeyi eski konumuna getir"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:20
+#: src/file-manager/nautilus-icon-view-ui.xml.h:22
+msgid "Str_etch Icon"
+msgstr "_Simgeyi Esnet"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:22
+#: src/file-manager/nautilus-icon-view-ui.xml.h:23
+msgid "Toggle using a tighter layout scheme"
+msgstr "Sıkışık düzen şeması kullan veya kullanma"
+
+#: src/file-manager/nautilus-icon-view-ui.xml.h:24
+msgid "_Keep Aligned"
+msgstr "_Sıralı Tut"
+
+# src/file-manager/nautilus-icon-view-ui.xml.h:30
+#: src/file-manager/nautilus-icon-view-ui.xml.h:25
+msgid "_Manually"
+msgstr "_Elle"
+
+# src/file-manager/nautilus-directory-view-ui.xml.h:6
+#: src/file-manager/nautilus-list-view-ui.xml.h:1
+msgid "Select the columns visible in this folder"
+msgstr "Bu klasör için gösterilecek sütunları seçin"
+
+#: src/file-manager/nautilus-list-view-ui.xml.h:2
+msgid "Visible _Columns..."
+msgstr "Gösterilecek _Sütunlar..."
+
+# src/nautilus-application.c:275
+#: src/nautilus-application.c:267
+msgid "Couldn't Create Required Folder"
+msgstr "Gereken Klasör Oluşturulamadı"
+
+# src/nautilus-application.c:280
+#: src/nautilus-application.c:268
+#, c-format
+msgid "Nautilus could not create the required folder \"%s\"."
+msgstr "Natutilus gerekli \"%s\" klasörünü oluşturamadı."
+
+#: src/nautilus-application.c:270
+msgid ""
+"Before running Nautilus, please create the following folder, or set "
+"permissions such that Nautilus can create it."
+msgstr ""
+"Nautilus'u çalıştırmadan önce, lütfen aşağıdaki klasörü oluşturun, ya da "
+"Nautilus'un oluşturabileceği şekilde erişim haklarını ayarlayın."
+
+# src/nautilus-application.c:280
+#: src/nautilus-application.c:273
+msgid "Couldn't Create Required Folders"
+msgstr "Gereken Klasörler Oluşturulamadı"
+
+#: src/nautilus-application.c:274
+#, c-format
+msgid "Nautilus could not create the following required folders: %s."
+msgstr "Nautilus aşağıdaki gereken klasörleri oluşturamadı: %s."
+
+#: src/nautilus-application.c:276
+msgid ""
+"Before running Nautilus, please create these folders, or set permissions "
+"such that Nautilus can create them."
+msgstr ""
+"Nautilus'u çalıştırmadan önce, lütfen aşağıdaki klasörü oluşturun, ya da "
+"Nautilus'un oluşturabileceği şekilde erişim haklarını ayarlayın."
+
+#: src/nautilus-application.c:344
+msgid "Link To Old Desktop"
+msgstr "Eski Masaüstüne Bağ"
+
+#: src/nautilus-application.c:360
+msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
+msgstr "\"Eski Masaüstüne Bağ\" adındaki bağ masaüstünüzde oluşturuldu."
+
+#: src/nautilus-application.c:361
+msgid ""
+"The location of the desktop directory has changed in GNOME 2.4. You can open "
+"the link and move over the files you want, then delete the link."
+msgstr ""
+"Masaüstü dizininin konumu GNOME 2.4'de değiştirildi. Bağı açabilir ve "
+"istediğiniz dosyaları yeni masaüstüne taşıyabilir, sonrada bağı "
+"silebilirsiniz."
+
+#: src/nautilus-application.c:363
+msgid "Migrated Old Desktop"
+msgstr "Aktarılan Eski Masaüstü"
+
+#. Can't register myself due to trouble locating the
+#. * Nautilus_Shell.server file. This has happened when you
+#. * launch Nautilus with an LD_LIBRARY_PATH that
+#. * doesn't include the directory containing the oaf
+#. * library. It could also happen if the
+#. * Nautilus_Shell.server file was not present for some
+#. * reason. Sometimes killing oafd and gconfd fixes
+#. * this problem but we don't exactly understand why,
+#. * since neither of the above causes explain it.
+#.
+#: src/nautilus-application.c:506
+msgid ""
+"Nautilus can't be used now. Running the command \"bonobo-slay\" from the "
+"console may fix the problem. If not, you can try rebooting the computer or "
+"installing Nautilus again."
+msgstr ""
+"Nautilus kullanılamıyor. Konsoldan \"bonobo-slay\" komutunun işletilmesi bu "
+"problemi çözebilir. Eğer sorun hala giderilemiyorsa bilgisayarı yeniden açıp "
+"kapatın, ya da Nautilus'u yeniden kurun."
+
+# src/nautilus-application.c:400
+#. FIXME bugzilla.gnome.org 42536: The guesses and stuff here are lame.
+#: src/nautilus-application.c:512
+msgid ""
+"Nautilus can't be used now. Running the command \"bonobo-slay\" from the "
+"console may fix the problem. If not, you can try rebooting the computer or "
+"installing Nautilus again.\n"
+"\n"
+"Bonobo couldn't locate the Nautilus_shell.server file. One cause of this "
+"seems to be an LD_LIBRARY_PATH that does not include the bonobo-activation "
+"library's directory. Another possible cause would be bad install with a "
+"missing Nautilus_Shell.server file.\n"
+"\n"
+"Running \"bonobo-slay\" will kill all Bonobo Activation and GConf processes, "
+"which may be needed by other applications.\n"
+"\n"
+"Sometimes killing bonobo-activation-server and gconfd fixes the problem, but "
+"we don't know why.\n"
+"\n"
+"We have also seen this error when a faulty version of bonobo-activation was "
+"installed."
+msgstr ""
 "Nautilus şuanda kullanılamıyor. \"bonobo-slay\" komutunu konsoldan "
+"Nautilus şu anda kullanılamıyor. \"bonobo-slay\" komutunu konsoldan "
 "kullanarak sorunu giderebilirsiniz. Eğer olmazsa bilgisayarı yeniden "
 "başlatabilir veya Nautilus'u yeniden yükleyebilirsiniz.\n"
 "\n"
@@ -7255,7 +7533,7 @@ msgstr "_Şablonlar"
 #: src/nautilus-window-menus.c:639
 #, fuzzy
 msgid "Go to the templates folder"
-msgstr "Şablom Klasörüne Git"
+msgstr "Şablon Klasörüne Git"
 
 # data/linksets/desktop.xml.h:2 libnautilus-private/nautilus-file.c:4642
 # libnautilus-private/nautilus-trash-directory.c:301
