Reverted broken tr.po update that broke the nautilus build.
2004-12-08  Christian Rose  <menthos@menthos.com>

	* tr.po: Reverted broken tr.po update that broke
	the nautilus build.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-08  Christian Rose  <menthos@menthos.com>
+
+	* tr.po: Reverted broken tr.po update that broke
+	the nautilus build.
+
 2004-12-05  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Fixed typo in  Turkish Translation
