Disconnect from right object.
2004-12-12  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-clipboard.c (merge_out_clipboard_menu_items):
	Disconnect from right object.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-12  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-clipboard.c (merge_out_clipboard_menu_items):
+	Disconnect from right object.
+
 2004-11-29  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c:
