Added "zu" to ALL_LINGUAS.
2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "zu" to ALL_LINGUAS.

	* po/zu.po: Added Zulu translation by
	Zuza Software Foundation <info@translate.org.za>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
- 2004-12-12  Alexander Larsson  <alexl@redhat.com>
+2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* configure.in: Added "zu" to ALL_LINGUAS.
+
+2004-12-12  Alexander Larsson  <alexl@redhat.com>
  
  	* libnautilus-private/nautilus-desktop-link-monitor.c:
  	(destroy_desktop_link_monitor),
