--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* configure.in: Added "zu" to ALL_LINGUAS.
+
 2004-12-12  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-desktop-link-monitor.c:
