Fill in ctrl-l dialog correctly for desktop.
2004-12-15  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
	Fill in ctrl-l dialog correctly for desktop.

	Patch from Matthew Gatto <poobar@nycap.rr.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-12-15  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
+	Fill in ctrl-l dialog correctly for desktop.
+	
+	Patch from Matthew Gatto <poobar@nycap.rr.com>
+
+2004-12-15  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	(nautilus_icon_container_update_icon):
 	* libnautilus-private/nautilus-icon-factory.c: (load_icon_file):
