--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-12-15  Vijaykumar Patwari <vijaykumar.patwari@wipro.com>
+
+	* src/nautilus-bookmarks-window.[ch]:
+	(open_selected_bookmark): New function, choose if to open in 
+	parent or new window.
+	(get_bookmark_nautilus_navigation_window_new): Get New window.
+	(on_jump_button_clicked): Call open_selected_bookmark.
+	(on_row_activated): Call open_selected_bookmark.
+	* src/nautilus-navigation-window-menus.c: 
+	(get_or_create_bookmarks_window): Reset signals for the 
+	edit bookmark dialog.
+	fixes bug #160224.
+	
 2004-12-15  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
