Don't use frames for images with alpha.
2004-12-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c: (load_icon_file):
	Don't use frames for images with alpha.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-17  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-factory.c: (load_icon_file):
+	Don't use frames for images with alpha.
+
 2004-12-15  Vijaykumar Patwari <vijaykumar.patwari@wipro.com>
 
 	* src/nautilus-bookmarks-window.[ch]:
