fix changelog entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* libnautilus-private/nautilus-icon-factory.c: (load_icon_file):
 	Don't use frames for images with alpha.
 
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+	
 2004-12-15  Vijaykumar Patwari <vijaykumar.patwari@wipro.com>
 
 	* src/nautilus-bookmarks-window.[ch]:
