--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-21  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2004-12-20  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
