Fixety fix Fixfixety fix
2005-01-07  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Fixety fix
	* no.po: Fixfixety fix

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Fixety fix
+	* no.po: Fixfixety fix
+
 2005-01-04  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
