--- a/po/nb.po
+++ b/po/nb.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-11-25 10:37+0100\n"
-"PO-Revision-Date: 2004-11-25 10:41+0100\n"
+"PO-Revision-Date: 2005-01-07 12:41+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -3958,11 +3958,11 @@ msgstr[1] "Åpne i %d nye vinduer"
 
 #: src/file-manager/fm-directory-view.c:6202
 msgid "Browse Folder"
-msgstr "Vis mappe"
+msgstr "Bla gjennom"
 
 #: src/file-manager/fm-directory-view.c:6204
 msgid "Browse Folders"
-msgstr "Vis mapper"
+msgstr "Bla gjennom"
 
 #: src/file-manager/fm-directory-view.c:6223
 msgid "_Delete from Trash"
